@@ -1,5 +1,9 @@
 2013-01-08  Jonathan Wakely  <jwakely.gcc@gmail.com>
 
+	* doc/xml/manual/status_cxx2011.xml: Document that N3189 is missing.
+
+2013-01-08  Jonathan Wakely  <jwakely.gcc@gmail.com>
+
 	PR libstdc++/55908
 	* include/std/functional (_Mem_fn::operator()): Fix constraints to
 	avoid ambiguity.
